[OPLU-48] Read mode endpoint (#52)
